--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2018"
 
 [dependencies]
 discord-rpc-client = "0.3.0"
+regex = "1"
 window_titles = { git = "https://github.com/HiruNya/window_titles" }
